--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,24 @@
     <title>React Router Example</title>
   </head>
   <body>
+          <section>
+            <pre>
+█▄
+███▄
+███▀█▄
+███  ▀█▄              █
+███   ███             █     ▄              ▄▄▄
+███   ███     ▄█▄     █     █       ▄█▄  ▄█▀ ▀▀
+███   ███   ▄█▀ ▀█▄  ▀█▀ ▄▄▄█ ▀   ▄█▀ ▀█▄ ▀█▄▄
+███   ███ ▄██▄   ▄██▄ █▄ █  █ █ ▄██▄   ▄██▄  ▀█▄
+███   ███                █             ▄▄▄▄▄▄▄█▀
+███   ███
+███   █▀
+███
+███
+█▀
+        </pre>
+    </section>
     <div id="root"></div>
   </body>
 </html>
