> before active route

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
+ <!-- <link rel = "stylesheet" type = "text/css" href = "../src/normalize.css" /> -->
+ <!-- <link rel = "stylesheet" type = "text/css" href = "../src/skeleton.css" /> -->
+ <!-- <link rel = "stylesheet" type = "text/css" href = "../src/index.css" /> -->
     <title>nathias ID</title>
   </head>
   <body>
-          <section>
             <pre>
 █▄
 ███▄
