--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport"
-          content="width=device-width, initial-scale=1, shrink-to-fit=no">
- <!-- <link rel = "stylesheet" type = "text/css" href = "../src/normalize.css" /> -->
+          content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+ <link rel = "stylesheet" type = "text/css" href = "../src/normalize.css" />
  <!-- <link rel = "stylesheet" type = "text/css" href = "../src/skeleton.css" /> -->
  <!-- <link rel = "stylesheet" type = "text/css" href = "../src/index.css" /> -->
+
     <title>nathias ID</title>
   </head>
   <body>
-            <pre>
+      <pre id="logo">
 █▄
 ███▄
 ███▀█▄
@@ -25,8 +26,7 @@
 ███
 ███
 █▀
-        </pre>
-    </section>
+  </pre>
     <div id="root"></div>
   </body>
 </html>
