--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=yes">
  <link rel = "stylesheet" type = "text/css" href = "../src/normalize.css" />
- <!-- <link rel = "stylesheet" type = "text/css" href = "../src/skeleton.css" /> -->
- <!-- <link rel = "stylesheet" type = "text/css" href = "../src/index.css" /> -->
+<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+<link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack.css'>
+ <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+ <link rel = "stylesheet" type = "text/css" href = "../src/index.css" />
 
     <title>nathias ID</title>
   </head>
