--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,12 @@
  <link rel = "stylesheet" type = "text/css" href = "../src/index.css" />
 
     <title>nathias ID</title>
+    <style>
+
+    </style>
   </head>
   <body>
+    <span>
       <pre id="logo">
 █▄
 ███▄
@@ -29,6 +33,7 @@
 ███
 █▀
   </pre>
+    </span>
     <div id="root"></div>
   </body>
 </html>
