--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,7 @@
     </style>
   </head>
   <body>
-    <span>
-      <pre id="logo">
+      <pre id="logo" class="glitch">
 █▄
 ███▄
 ███▀█▄
@@ -32,8 +31,7 @@
 ███
 ███
 █▀
-  </pre>
-    </span>
+      </pre>
     <div id="root"></div>
   </body>
 </html>
