submenu & contact style

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
 <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack.css'>
  <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
  <link rel = "stylesheet" type = "text/css" href = "../src/index.css" />
-
+<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css?family=Cinzel|Cinzel+Decorative|Nosifer|Pirata+One|Press+Start+2P|UnifrakturCook:700" rel="stylesheet"> 
     <title>nathias ID</title>
     <style>
 
